Fixed table to deal with overflow

--- a/styles/components/FeaturedProject.module.css
+++ b/styles/components/FeaturedProject.module.css
@@ -128,7 +128,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.5rem;
+  font-size: 1.35rem;
   border-radius: 50%;
   outline: 1px solid black;
 }
