--- a/styles/sections/Project.module.css
+++ b/styles/sections/Project.module.css
@@ -53,6 +53,7 @@
   font-weight: 700;
   line-height: 2.4375rem;
   margin-bottom: 0.5rem;
+  margin-top: 2rem;
 }
 
 .ProjectsPageLink {
@@ -76,6 +77,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  
 }
 
 .OtherProjectList {
@@ -87,15 +89,17 @@
   width: 100%;
   height: 35rem;
   white-space: nowrap;
-
+  overflow-x: scroll;
   padding: 0.25rem;
+  overflow-y: visible;
+  padding: 1rem 1rem 0rem 0.25rem;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 751px) {
   .Projects {
     height: 100%;
     width: 100%;
-    overflow-y: hidden;
   }
 
   .Projects section {
@@ -121,10 +125,10 @@
   .OtherProjectList {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    column-gap: 1rem;
-    overflow-y: scroll;
+    column-gap: 2rem;
+    overflow: visible;
     width: 100%;
     height: 45rem;
   }
@@ -133,6 +137,7 @@
 @media screen and (min-width: 1300px) {
   .OtherProjectList {
     width: 1200px;
+    overflow: hidden;
   }
 }
 @media screen and (min-width: 1300px) {
